# ComfyUI-WanAnimalPreprocessor

./: .gitignore  nodes.py  pyproject.toml  readme.md  requirements.txt  retarget_pose.py  test_animal_pose.py  utils.py
models/: model_downloader.py
onetoall/: infer_function.py  utils.py
pose_utils/: human_visualization.py  pose2d_utils.py
